.gitignore is now working

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,31 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+
+    String env = Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT");
+    String mongoDbUrl = Environment.GetEnvironmentVariable("MONGODB_URL");
+
+
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <h1>Configuration</h1>
+
+
+@if (env == null)
+{
+    <div class="alert alert-primary" role="alert">
+        La variable d'environnement ASPNETCORE_ENVIRONMENT n'est pas définie
+    </div>
+}
+
+@if (mongoDbUrl == null)
+{
+    <div class="alert alert-primary" role="alert">
+        La variable d'environnement MONGODB_URL n'est pas définie
+    </div>
+}
+    
 </div>
