--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,10 +8,21 @@
     <link rel="stylesheet" href="~/css/site.css" />
 
 </head>
+
+@{
+
+    
+    String env = Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT");
+    
+}
 <body>
+    <div class="corner-ribbon top-left sticky red shadow">@env</div>
+
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            
             <div class="container">
+                
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MongoApi</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
