--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 
     String env = Environment.GetEnvironmentVariable("ASPNETCORE_ENVIRONMENT");
     String mongoDbUrl = Environment.GetEnvironmentVariable("MONGODB_URL");
-    String pipeDreamUrl = Environment.GetEnvironmentVariable("PIPEDREAM_URL_URL");
+    String pipeDreamUrl = Environment.GetEnvironmentVariable("PIPEDREAM_URL");
 
 }
 
