--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -16,7 +16,14 @@
     
 }
 <body>
-    <div class="corner-ribbon top-left sticky red shadow">@env</div>
+    
+    @if (env.Equals("Production")){
+        <div class="corner-ribbon top-left sticky red shadow">@env</div>
+    }else{
+        <div class="corner-ribbon top-left sticky green shadow">@env</div>
+    }
+    
+    
 
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
@@ -35,6 +42,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Pipedream">Pipedream</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/swagger" target="_blank">Swgagger</a>
