--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -88,7 +88,7 @@
 }
     
 
-<h1 class="display-4">Configuration</h1>
+<h1 class="display-4">BuildInfo</h1>
 
 <div id="conf_spinner" class="spinner-border" role="status">
   <span class="sr-only">Loading...</span>
