--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,6 +49,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/swagger" target="_blank">Swgagger</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="/swagger" target="_blank">Prometheus</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" href="http://localhost:3000" target="_blank">Grafana</a>
+                        </li>
 
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
