--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,13 +49,19 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" href="/swagger" target="_blank">Swgagger</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/swagger" target="_blank">Prometheus</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="http://localhost:3000" target="_blank">Grafana</a>
+                        
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Grafana/Prometheus
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/metrics" asp-action="Index">Prometheus internal metric</a>
+                            <a class="dropdown-item" href="k8s.prometheus.org" asp-action="Inject">Prometheus UI</a>
+                            <a class="dropdown-item" href="k8s.grafana.org" asp-action="Inject">Grafana UI</a>
+                            </div>
                         </li>
 
+                       
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             MongoDb
