fix linl problems

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,9 +55,9 @@
                             Grafana/Prometheus
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/metrics" asp-action="Index">Prometheus internal metric</a>
-                            <a class="dropdown-item" href="k8s.prometheus.org" asp-action="Inject">Prometheus UI</a>
-                            <a class="dropdown-item" href="k8s.grafana.org" asp-action="Inject">Grafana UI</a>
+                            <a class="dropdown-item" target="_blank" href="/metrics">Prometheus internal metric</a>
+                            <a class="dropdown-item" target="_blank" href="http://k8s.prometheus.org">Prometheus UI</a>
+                            <a class="dropdown-item" target="_blank" href="http://k8s.grafana.org">Grafana UI</a>
                             </div>
                         </li>
 
