--- a/Views/Beer/inject.cshtml
+++ b/Views/Beer/inject.cshtml
@@ -29,7 +29,7 @@
             $.ajax({
                 type: "POST",
                 
-                url: "api/Beer/save",
+                url: "api/Beer",
                 data: JSON.stringify(jsonData),
                 dataType: "json",
                 contentType: dataType,
