ajax call externalname tests

--- a/Views/Home/Pipedream.cshtml
+++ b/Views/Home/Pipedream.cshtml
@@ -24,7 +24,7 @@
 
         $.ajax({
             type: "GET",
-            url: "@pipeDreamUrl",
+            url: "https://pipedream-external",
             contentType: dataType,
             success: function (data){
                 console.log(data)
