--- a/Views/Home/Pipedream.cshtml
+++ b/Views/Home/Pipedream.cshtml
@@ -26,7 +26,7 @@
 
         $.ajax({
             type: "GET",
-            url: "https://pipedream-external",
+            url: "https://k8s.mongoapi.org/api/pipedream",
             contentType: dataType,
             success: function (data){
                 console.log(data)
