--- a/Views/Beer/Index.cshtml
+++ b/Views/Beer/Index.cshtml
@@ -32,7 +32,7 @@
                 "<td>" + entry.manufacturer + "</td>" +
                 "<td>" + entry.price +"</td>" +
                 "<td>" + entry.categoriy + "</td>" +
-                "<td><button type='button' onclick='onRemoveBeer(this)' id='" + entry.id + "'' class='btn btn-danger'>Delete</button></td>" +
+                "<td><button type='button' onclick='onRemoveBeer(this)' id='" + entry.id + "'' class='btn btn-danger'>Deletedotnet run</button></td>" +
                 "</tr>")
             });
         }
